bindings/RosuFFI.h

typedef struct ResultPtrFFIError ResultPtrFFIError;
typedef struct ScoreState ScoreState;
typedef struct Difficulty Difficulty;
typedef struct Performance Performance;
typedef struct BeatmapAttributesBuilder BeatmapAttributesBuilder;
typedef struct HitWindows HitWindows;
typedef struct BeatmapAttributes BeatmapAttributes;
typedef struct Beatmap Beatmap;
typedef struct Option_u32 Option_u32;
struct ResultPtrFFIError { uint32_t variant; union { void *ok; uint32_t err; } payload; };
struct HitWindows {
    Option_f64 ar;
    Option_f64 od_perfect;
    Option_f64 od_great;
    Option_f64 od_good;
    Option_f64 od_ok;
    Option_f64 od_meh;
};
struct BeatmapAttributes {
    double ar;
    double od;
    float cs;
    float hp;
    double clock_rate;
    HitWindows hit_windows;
};
typedef enum Mode {
    MODE_OSU = 0,
    MODE_TAIKO = 1,
    MODE_CATCH = 2,
    MODE_MANIA = 3,
} Mode;
struct Option_u32 { uint32_t variant; uint32_t some; };
struct ScoreState {
    uint32_t max_combo;
    uint32_t osu_large_tick_hits;
    uint32_t osu_small_tick_hits;
    uint32_t slider_end_hits;
    uint32_t n_geki;
    uint32_t n_katu;
    uint32_t n300;
    uint32_t n100;
    uint32_t n50;
    uint32_t misses;
    Option_u32 legacy_total_score;
};
void performance_clock_rate(Performance * instance, double clock_rate);
void beatmap_destroy(const Beatmap * instance);
void performance_small_tick_hits(Performance * instance, uint32_t small_tick_hits);
BeatmapAttributes beatmap_attributes_builder_build(const BeatmapAttributesBuilder * instance, const Beatmap * beatmap);
void performance_mode(Performance * instance, Mode mode);
ResultPtrFFIError gradual_performance_create(const Difficulty * difficulty, const Beatmap * beatmap);
void performance_state(Performance * instance, ScoreState state);