JavaRosuPP/src/main/java/desu/life/raw/RosuNative.java


    /**
     * {@snippet lang=c :
     * void performance_clock_rate(Performance *instance, double clock_rate)
     * }
     */
    public static void performance_clock_rate(MemorySegment instance, double clock_rate) {
        var mh$ = performance_clock_rate.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("performance_clock_rate", instance, clock_rate);
            }
            mh$.invokeExact(instance, clock_rate);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class beatmap_destroy {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            RosuNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("beatmap_destroy").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void beatmap_destroy(const Beatmap *instance)
     * }
     */
    public static FunctionDescriptor beatmap_destroy$descriptor() {
        return beatmap_destroy.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void beatmap_destroy(const Beatmap *instance)
     * }
     */
    public static MethodHandle beatmap_destroy$handle() {
        return beatmap_destroy.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void beatmap_destroy(const Beatmap *instance)
     * }
     */
    public static MemorySegment beatmap_destroy$address() {
        return beatmap_destroy.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void beatmap_destroy(const Beatmap *instance)
     * }
     */
    public static void beatmap_destroy(MemorySegment instance) {
        var mh$ = beatmap_destroy.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("beatmap_destroy", instance);
            }
            mh$.invokeExact(instance);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class performance_small_tick_hits {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            RosuNative.C_POINTER,
            RosuNative.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("performance_small_tick_hits").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void performance_small_tick_hits(Performance *instance, uint32_t small_tick_hits)
     * }
     */
    public static FunctionDescriptor performance_small_tick_hits$descriptor() {
        return performance_small_tick_hits.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void performance_small_tick_hits(Performance *instance, uint32_t small_tick_hits)
     * }
     */
    public static MethodHandle performance_small_tick_hits$handle() {
        return performance_small_tick_hits.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void performance_small_tick_hits(Performance *instance, uint32_t small_tick_hits)
     * }
     */
    public static MemorySegment performance_small_tick_hits$address() {
        return performance_small_tick_hits.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void performance_small_tick_hits(Performance *instance, uint32_t small_tick_hits)
     * }
     */
    public static void performance_small_tick_hits(MemorySegment instance, int small_tick_hits) {
        var mh$ = performance_small_tick_hits.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("performance_small_tick_hits", instance, small_tick_hits);
            }
            mh$.invokeExact(instance, small_tick_hits);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class beatmap_attributes_builder_build {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            BeatmapAttributes.layout(),
            RosuNative.C_POINTER,
            RosuNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("beatmap_attributes_builder_build").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * BeatmapAttributes beatmap_attributes_builder_build(const BeatmapAttributesBuilder *instance, const Beatmap *beatmap)
     * }
     */
    public static FunctionDescriptor beatmap_attributes_builder_build$descriptor() {
        return beatmap_attributes_builder_build.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * BeatmapAttributes beatmap_attributes_builder_build(const BeatmapAttributesBuilder *instance, const Beatmap *beatmap)
     * }
     */
    public static MethodHandle beatmap_attributes_builder_build$handle() {
        return beatmap_attributes_builder_build.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * BeatmapAttributes beatmap_attributes_builder_build(const BeatmapAttributesBuilder *instance, const Beatmap *beatmap)
     * }
     */
    public static MemorySegment beatmap_attributes_builder_build$address() {
        return beatmap_attributes_builder_build.ADDR;
    }

    /**
     * {@snippet lang=c :
     * BeatmapAttributes beatmap_attributes_builder_build(const BeatmapAttributesBuilder *instance, const Beatmap *beatmap)
     * }
     */
    public static MemorySegment beatmap_attributes_builder_build(SegmentAllocator allocator, MemorySegment instance, MemorySegment beatmap) {
        var mh$ = beatmap_attributes_builder_build.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("beatmap_attributes_builder_build", allocator, instance, beatmap);
            }
            return (MemorySegment)mh$.invokeExact(allocator, instance, beatmap);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class performance_mode {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            RosuNative.C_POINTER,
            RosuNative.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("performance_mode").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void performance_mode(Performance *instance, Mode mode)
     * }
     */
    public static FunctionDescriptor performance_mode$descriptor() {
        return performance_mode.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void performance_mode(Performance *instance, Mode mode)
     * }
     */
    public static MethodHandle performance_mode$handle() {
        return performance_mode.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void performance_mode(Performance *instance, Mode mode)
     * }
     */
    public static MemorySegment performance_mode$address() {
        return performance_mode.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void performance_mode(Performance *instance, Mode mode)
     * }
     */
    public static void performance_mode(MemorySegment instance, int mode) {
        var mh$ = performance_mode.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("performance_mode", instance, mode);
            }
            mh$.invokeExact(instance, mode);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class gradual_performance_create {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ResultPtrFFIError.layout(),
            RosuNative.C_POINTER,
            RosuNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("gradual_performance_create").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * ResultPtrFFIError gradual_performance_create(const Difficulty *difficulty, const Beatmap *beatmap)
     * }
     */
    public static FunctionDescriptor gradual_performance_create$descriptor() {
        return gradual_performance_create.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * ResultPtrFFIError gradual_performance_create(const Difficulty *difficulty, const Beatmap *beatmap)
     * }
     */
    public static MethodHandle gradual_performance_create$handle() {
        return gradual_performance_create.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * ResultPtrFFIError gradual_performance_create(const Difficulty *difficulty, const Beatmap *beatmap)
     * }
     */
    public static MemorySegment gradual_performance_create$address() {
        return gradual_performance_create.ADDR;
    }

    /**
     * {@snippet lang=c :
     * ResultPtrFFIError gradual_performance_create(const Difficulty *difficulty, const Beatmap *beatmap)
     * }
     */
    public static MemorySegment gradual_performance_create(SegmentAllocator allocator, MemorySegment difficulty, MemorySegment beatmap) {
        var mh$ = gradual_performance_create.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("gradual_performance_create", allocator, difficulty, beatmap);
            }
            return (MemorySegment)mh$.invokeExact(allocator, difficulty, beatmap);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class performance_state {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            RosuNative.C_POINTER,
            ScoreState.layout()
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("performance_state").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void performance_state(Performance *instance, ScoreState state)
     * }
     */
    public static FunctionDescriptor performance_state$descriptor() {
        return performance_state.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void performance_state(Performance *instance, ScoreState state)
     * }
     */
    public static MethodHandle performance_state$handle() {
        return performance_state.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void performance_state(Performance *instance, ScoreState state)
     * }
     */
    public static MemorySegment performance_state$address() {
        return performance_state.ADDR;
    }
